@@ -8,7 +8,10 @@ use Mango::BSON ':bson';
 
 use OwnerConsole::Email         ();
 use OwnerConsole::Group::Invite ();
-use OwnerConsole::Challenge      ();
+use OwnerConsole::Challenge     ();
+
+# The "connect" related tables should move to their own database.
+use ConnectConsole::AppSession  ();
 
 =chapter NAME
 OwnerConsole::Model::Batch - database with only temporary information
@@ -23,6 +26,7 @@ collections:
 =item * 'emails': outgoing emails
 =item * 'invites': group invites
 =item * 'challenges': state machine for challenges
+=item * 'appsession': connect application sessions
 =back
 
 =chapter METHODS
@@ -33,28 +37,15 @@ has emails     => sub { $_[0]->{OMB_emails}  ||= $_[0]->db->collection('emails')
 has invites    => sub { $_[0]->{OMB_invites} ||= $_[0]->db->collection('invites')};
 has challenges => sub { $_[0]->{OMB_chall}   ||= $_[0]->db->collection('challenges')};
 
+has appsession => sub { $_[0]->{OMB_appsess} ||= $_[0]->db->collection('appsession') };
+
 sub upgrade
 {	my $self = shift;
 
-    #### Indices
-	# We can run "ensure_index()" as often as we want.
-
-#$self->emails->drop_index('emailid');
-	$self->emails->ensure_index({ emailid => 1 }, { unique => bson_true });
-	$self->emails->ensure_index({ sender  => 1 }, { unique => bson_true });
-
-	$self->emails->ensure_index({ sendto  => 1 }, {
-		unique    => bson_true,
-		collation => { locale => 'en', strength => 2 },  # address is case-insensitive
-	});
-
-	$self->invites->ensure_index({ token => 1 }, { unique => bson_true });
-	my $autoclean = $::app->config('groups')->{cleanup_invitation} || 30;
-	$self->invites->ensure_index({ expires => 1 }, { expireAfterSeconds => int($autoclean * 86400) } );
-
-    $self->challenges->ensure_index({ token => 1 }, { unique => bson_true  });
-    my $expire_challenges = $::app->config('proofs')->{expire_challenge} || 30;  # days
-    $self->challenges->ensure_index({ changed => 1 }, { expireAfterSeconds => int($expire_challenges * 86400) });
+	$self->_upgrade_emails
+		->_upgrade_invites
+		->_upgrade_challenges
+		->_upgrade_appsession;
 
 	$self;
 }
@@ -65,9 +56,22 @@ sub upgrade
 The document is maintained by M<OwnerConsole::Email> objects.
 =cut
 
+sub _upgrade_emails()
+{	my $self = shift;
+	$self->emails->ensure_index({ id => 1 }, { unique => bson_true });
+	$self->emails->ensure_index({ sender  => 1 }, { unique => bson_true });
+
+	$self->emails->ensure_index({ sendto  => 1 }, {
+		unique    => bson_true,
+		collation => { locale => 'en', strength => 2 },  # address is case-insensitive
+	});
+
+	$self;
+}
+
 sub email($)
 {	my ($self, $emailid) = @_;
-	my $data = $self->emails->find_one({emailid => $emailid})
+	my $data = $self->emails->find_one({id => $emailid})
 		or return;
  
 	OwnerConsole::Email->fromDB($data);
@@ -83,7 +87,7 @@ sub emailByAddress($)
  
 sub removeEmail($)
 {	my ($self, $emailid) = @_;
-	my $result = $self->emails->remove({emailid => $emailid}, {single => 1});
+	my $result = $self->emails->remove({id => $emailid}, {single => 1});
 	my $count  = $result->{deleteCount};
 	$self->log($count ? "could not find email $emailid to remove" : "removed email $emailid");
 	$count;
@@ -92,8 +96,8 @@ sub removeEmail($)
 sub removeEmailsRelatedTo($)
 {	my ($self, $relid) = @_;
 	my $result = $self->emails->remove({related => $relid});
-use Data::Dumper ();
-warn "RESULT $result";
+use Data::Dumper;
+warn "RESULT ", Dumper $result;
 	my $count  = $result->{deleteCount};
 	$self->log("removed $count outgoing emails related to $relid");
 	$count;
@@ -104,7 +108,6 @@ sub queueEmail($)
 
 #XXX this should move to a Minion task
 	$email->buildMessage($::app->config->{email})->send(to => $email->sendTo);
-#	$self->emails->save($email->toDB);
 }
  
 sub allEmails()
@@ -117,6 +120,15 @@ sub allEmails()
 
 The document is maintained by M<OwnerConsole::Group::Invite> objects.
 =cut
+
+sub _upgrade_invites()
+{	my $self = shift;
+	$self->invites->ensure_index({ token => 1 }, { unique => bson_true });
+
+	my $autoclean = $::app->config('groups')->{cleanup_invitation} || 30;
+	$self->invites->ensure_index({ expires => 1 }, { expireAfterSeconds => int($autoclean * 86400) } );
+	$self;
+}
 
 sub invitesForGroup($)
 {	my ($self, $group) = @_;
@@ -147,6 +159,15 @@ The challenges table hides internal states and ids from the outside, by only
 showing a token.
 =cut
 
+sub _upgrade_challenges()
+{	my $self = shift;
+    $self->challenges->ensure_index({ token => 1 }, { unique => bson_true  });
+
+    my $expire_challenges = $::app->config('proofs')->{expire_challenge} || 30;  # days
+    $self->challenges->ensure_index({ changed => 1 }, { expireAfterSeconds => int($expire_challenges * 86400) });
+	$self;
+}
+
 sub saveChallenge($)
 {	my ($self, $challenge) = @_;
 	$self->challenges->save($challenge->toDB);
@@ -154,10 +175,36 @@ sub saveChallenge($)
 
 sub challenge($)
 {	my ($self, $token) = @_;
-	my $data = $self->challenges->find_one({token => $token})
-		or return;
+	my $data = $self->challenges->find_one({token => $token});
+	$data ? OwnerConsole::Challenge->fromDB($data) : undef;
+}
 
-	OwnerConsole::Challenge->fromDB($data);
+#---------------------
+=section Application Session
+Keeps track on (connect) logged-in application instances.
+=cut
+
+sub _upgrade_appsession()
+{	my $self = shift;
+    $self->appsession->ensure_index({ id => 1 }, { unique => bson_true  });
+	$self;
+}
+
+sub removeAppSession($)
+{	my ($self, $id) = @_;
+	$self->appsession->remove({ id => $id });
+}
+
+sub saveAppSession($)
+{	my ($self, $appsession) = @_;
+	$self->appsession->save($appsession->toDB);
+}
+
+sub appSession($)
+{	my ($self, $id) = @_;
+
+	my $data = $self->appsession->find_one({id => $id});
+	$data ? ConnectConsole::AppSession->fromDB($data) : undef;
 }
 
 1;
