@@ -23,7 +23,7 @@
     <tr><td><%= $identity->role %></td><td><a href="/dashboard/identity/<%= $identity->id %>"><i class="fa-solid fa-pen" aria-label="edit identity"></a></i></tr>
 % }
     <tr class="table-light">
-        <td colspan="2"><a href="/dashboard/identity/new" class="btn btn-primary"><i class="fa-solid fa-circle-plus" aria-hidden="true"></i> Create a new Identity<a></td></tr>
+        <td colspan="2"><a href="/dashboard/identity/new" class="btn btn-primary"><i class="fa-solid fa-circle-plus" aria-hidden="true"></i> Create a new Identity</a></td></tr>
   </tbody>
   </table>
 </form>
