@@ -12,6 +12,7 @@ version 0.02:
 	- move to new 'id' policy of core
 	- use $obj->isNew
 	- move to new proof manager "assets"
+	- first go with the service form
 
 version 0.01: Wed 09 Sep 12:07:38 CEST 2024
 	- initial release
